doc: test and adjustment to endpoints
